--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light main">
         <div class="container d-flex align-items-center justify-content-between">
-            <a class="navbar-brand" href="https://intospace.io/">
-                <img src="/images/space-logo.svg" width="100px;" height="25px;"></a>
+            <a class="navbar-brand" href="#">
+                <img src="images/space-logo.svg" width="100px;" height="25px;"></a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
