--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="product-card col-auto mb-3 pt-3">
             <div class="product-content">
               <div class="d-flex align-items-center">
-                <img height="50" class="mb-3" src="../images/Channel-logo.svg" alt="Channel-logo">
+                <img height="50" class="mb-3" src="images/Channel-logo.svg" alt="Channel-logo">
                 <h4 class="ms-3">Channel</h4>
               </div>
               <p>
@@ -108,7 +108,7 @@
           <div class="product-card col-auto mb-3 pt-3">
             <div class="product-content">
                 <div class="d-flex align-items-center">
-                    <img height="55" class="mb-3" src="../images/OKR-logo.svg" alt="OKR-logo">
+                    <img height="55" class="mb-3" src="images/OKR-logo.svg" alt="OKR-logo">
                     <h4 class="ms-3">OKR</h4>
                 </div>
                 <p>
@@ -123,7 +123,7 @@
           <div class="product-card col-auto mb-3 pt-3">
              <div class="product-content">
                <div class="d-flex align-items-center">
-                 <img height="50" class="mb-3" src="../images/Meet-logo.svg" alt="Meet-logo">
+                 <img height="50" class="mb-3" src="images/Meet-logo.svg" alt="Meet-logo">
                  <h4 class="ms-3">Meet</h4>
               </div>
               <p>
@@ -139,7 +139,7 @@
           <div class="product-card col-auto mb-3 pt-3">
                <div class="product-content">
                    <div class="d-flex align-items-center">
-                      <img height="55" class="mb-3" src="../images/Email-logo.svg" alt="Email-logo">
+                      <img height="55" class="mb-3" src="images/Email-logo.svg" alt="Email-logo">
                        <h4 class="ms-3">Email</h4>
                   </div>
                   <p>
@@ -155,7 +155,7 @@
           <div class="product-card col-auto mb-3 pt-3">
                <div class="product-content">
                      <div class="d-flex align-items-center">
-                         <img height="50" class="mb-3" src="../images/Doc-logo.svg" alt="Doc-logo">
+                         <img height="50" class="mb-3" src="images/Doc-logo.svg" alt="Doc-logo">
                          <h4 class="ms-3">Doc</h4>
                      </div>
                       <p>
@@ -171,7 +171,7 @@
           <div class="product-card col-auto mb-3 pt-3">
               <div class="product-content">
                    <div class="d-flex align-items-center">
-                        <img height="50" class="mb-3" src="../images/Todo-logo.svg" alt="Todo-logo">
+                        <img height="50" class="mb-3" src="images/Todo-logo.svg" alt="Todo-logo">
                         <h4 class="ms-3">To-Do Planner</h4>
                    </div>
                    <p>
@@ -187,7 +187,7 @@
      </div>
     </section>
     
-    <div class="text-center"><img width="50" src="../images/curve-sep.webp"></div>
+    <div class="text-center"><img width="50" src="images/curve-sep.webp"></div>
 
     <!--Pricing-->
     <section class="pricing mt-5">
@@ -196,7 +196,7 @@
         <div class="card mb-2 mx-auto" style="max-width: 800px;">
             <div class="row g-0">
               <div class="col-md-4 text-center my-auto pt-2">
-                <img height="220" src="../images/dollar-icon.svg" class="img mx-auto" alt="Dollar Sign">
+                <img height="220" src="images/dollar-icon.svg" class="img mx-auto" alt="Dollar Sign">
               </div>
               <div class="col-md-8">
                 <div class="card-body my-5 mx-3">
@@ -213,14 +213,14 @@
           </div>
    </section>
 
-   <div class="text-center"><img width="50" src="../images/curve-sep.webp"></div>
+   <div class="text-center"><img width="50" src="images/curve-sep.webp"></div>
 
    <!--WhatisIT-->
    <section class="whatisit">
     <div class="container">
       <div class="mt-5 pb-5 row">
           <div class="col-lg-6 order-lg-last text-center">
-            <img width="70%" src="../images/integrate.svg" alt="integrate">
+            <img width="70%" src="images/integrate.svg" alt="integrate">
          </div>
          <div class="col-lg-6">
             <h2>Stand-alone but Integrated</h2>
@@ -234,7 +234,7 @@
 
       <div class=" mt-5 mb-5 row">
           <div class="col-lg-6 text-center">
-             <img width="60%" src="../images/secure-home-page.svg" alt="secure-home-page">
+             <img width="60%" src="images/secure-home-page.svg" alt="secure-home-page">
           </div>
           <div class="col-lg-6">
              <h2>Secure and Reliable</h2>
@@ -249,7 +249,7 @@
 
       <div class="mb-5 row">
           <div class="col-lg-6 order-lg-last text-center">
-             <img width="60%" src="../images/simple-fast.svg" alt="simple-fast">
+             <img width="60%" src="images/simple-fast.svg" alt="simple-fast">
           </div>
           <div class="col-lg-6">
              <h2>Simple, Fast, Beautiful</h2>
@@ -289,7 +289,7 @@
                     </div>
                </div>
                <div class="trial-img d-flex justify-content-center pt-2 pb-4 col-lg-4">
-                   <img height="200" src="../images/reward.svg" alt="dollar-sign">
+                   <img height="200" src="images/reward.svg" alt="dollar-sign">
                </div>
             </div>
         </div>
