--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               </li>
               
               <li class="nav-item ms-lg-3 me-0">
-                <a class="nav-link regular" href="#"><span>Login</span></a>
+                <a class="nav-link regular" href="chat.html"><span>Login</span></a>
               </li>
             </ul>
           </div>
